# SystemWatch

./: CMakeLists.txt  ReadMe.txt
include/: wdt_dio.h
script/: SysWatch.desktop  shutdown.sh
src/: main.cpp
